# buck2_tui

./: CLAUDE.md  Cargo.toml  README.md  project_mvp.md
src/: app.rs  buck.rs  events.rs  main.rs  ui.rs
src/scheduler/: hooks.rs  mod.rs  scheduler.rs  task.rs
