[package]
name = "buck_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
# TUI framework
crossterm = "0.28"
ratatui = "0.28"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# File system operations
walkdir = "2.3"
ignore = "0.4"

# JSON/YAML parsing for Buck files
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Fuzzy search
fuzzy-matcher = "0.3"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

# data structure
indexmap = "2"

# Buck2 integration
which = "6.0"
